--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 2025-07-23 Актуализировать has_night_mode
-2025-07-23 Добавить и заполнить колонку play_id
+x 2025-08-31 2025-07-23 Добавить и заполнить колонку play_id pri:A
 2025-07-23 Добавить и заполнить колонку gid
